# Conways-Game-of-Life-Cpp

./: .gitignore  Doxyfile  README.md  annotated.html  board_8hpp.html  board_8hpp_source.html  cell_8hpp.html  cell_8hpp_source.html  class_board-members.html  class_board.html  class_cell-members.html  class_cell.html  class_game-members.html  class_game.html  class_point-members.html  class_point.html  class_screen-members.html  class_screen.html  classes.html  config.sh  dir_15c8cce3d1c30ca18c198627519828ee.html  dir_4589413904c88745b2bb9169ef4c36bf.html  dir_5db7bfcb9273a1d26ff5e5c36d692bb8.html  dir_84f01898cced749f1f76fcd9d4e95bb8.html  dir_9ea5017e8fa7189fb9af6fe82af05461.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  doxy.sh  files.html  functions.html  functions_func.html  functions_vars.html  game_8hpp.html  game_8hpp_source.html  index.html  make.sh  md__r_e_a_d_m_e.html  menudata.js  pages.html  point_8hpp.html  point_8hpp_source.html  (+4 more)
.github/workflows/: cmake.yml  doxygen.yml
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_d.js  files_4.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
source/: CMakeLists.txt  main.cpp  test.cpp
source/ansi/: CMakeLists.txt  ansi.cpp  ansi.hpp
source/board/: CMakeLists.txt  board.cpp  board.hpp
source/cell/: CMakeLists.txt  cell.cpp  cell.hpp
source/game/: CMakeLists.txt  game.cpp  game.hpp
source/point/: CMakeLists.txt  point.cpp  point.hpp
source/screen/: CMakeLists.txt  screen.cpp  screen.hpp
